# Hexapod

./: CMakeLists.txt  DefaultLegPos.txt  Definitions.h  Hexapod.cpp  Hexapod.h  InverseKinematic.cpp  InverseKinematic.h  Leg.cpp  Leg.h  LegCtrl.cpp  LegCtrl.h  Movement.h  Parser.cpp  RippleGait.cpp  Serial.cpp  Servo.cpp  Servo.h  ServoValues.txt  SocketServer.cpp  TripodGait.cpp  TripodGait.h  main.cpp  servo_calib_data.txt
Debug/: DefaultLegPos.txt  Hexapod  Hexapod.d  InverseKinematic.d  Leg.d  LegCtrl.d  Movement.d  Parser.d  RippleGait.d  Servo.d  ServoValues.txt  SocketServer.d  TripodGait.d  WaveGait.d  main.d  makefile  servo.txt  subdir.mk
Webinterface/: Socket.php  index.php
Webinterface/css/: .giosaveCI0S9W  style.css  style_mobile.css
Webinterface/css/.metadata/.plugins/org.eclipse.compare/: dialog_settings.xml
Webinterface/css/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
Webinterface/css/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Webinterface/css/.metadata/.plugins/org.eclipse.epp.usagedata.recording/: upload0.csv  upload1.csv  upload2.csv  usagedata.csv
Webinterface/css/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Webinterface/css/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
src/: Definitions.h  Hexapod.cpp  Hexapod.h  InverseKinematic.cpp  Leg.cpp  Leg.h  LegCtrl.cpp  LegCtrl.h  Movement.cpp  Movement.h  Parser.cpp  Parser.h  RippleGait.h  Servo.cpp  Servo.h  TripodGait.cpp  WaveGait.cpp  WaveGait.h  main.cpp
(+6 files in other folders)
